assets/theme.css
/* ... */
html[dir=rtl] .grid{
    margin-left:0;
    margin-right:-30px
}

.grid--small{
  margin-left:-10px
}

.grid--small .grid__item{
    padding-left:10px;
  }

.grid__item{
  float:left;
  padding-left:30px;
  width:100%;
  min-height:1px
}

@media only screen and (max-width:589px){

.grid__item{
    padding-left:22px
}

html[dir=rtl] .grid__item{
      padding-left:0;
      padding-right:22px
}
  }

.grid__item[class*="--push"]{
    position:relative;
  }

html[dir=rtl] .grid__item{
    float:right;
    padding-left:0;
    padding-right:30px
}

html[dir=rtl] .grid__item[class*="--push"]{
      position:static;
    }

.grid--no-gutters{
  margin-left:0
}

.grid--no-gutters .grid__item{
    padding-left:0;
  }

.grid--small-gutters{
  margin-left:-10px;
  margin-bottom:-10px
}

.grid--small-gutters .grid__item{
    padding-left:10px;
    padding-bottom:10px;
  }

html[dir=rtl] .grid--small-gutters{
    margin-left:0;
    margin-right:-10px
}

html[dir=rtl] .grid--small-gutters .grid__item{
      padding-left:0;
      padding-right:10px;
    }

.grid--flush-bottom{
  margin-bottom:-30px;
  overflow:auto
}

.grid--flush-bottom>.grid__item{
    margin-bottom:30px;
  }

.grid--full{
  margin-left:0
}

.grid--full>.grid__item{
    padding-left:0;
  }

@media only screen and (min-width:590px){
  .grid--table-large{
    display:table;
    width:100%;
    table-layout:fixed
  }

    .grid--table-large>.grid__item{
      display:table-cell;
      vertical-align:middle;
      float:none;
    }
}

@media only screen and (max-width:589px){
  .small--grid--flush{
    margin-left:-2px
  }
  .page-width .small--grid--flush{
      margin-left:-20px;
      margin-right:-18px
  }

    .small--grid--flush>.grid__item{
      padding-left:2px;
    }

    .small--grid--flush .grid__item--collection-template{
      padding:0 20px;
    }
}

.one-whole{width:100%;}

.one-half{width:50%;}

.one-third{width:33.33333%;}

.two-thirds{width:66.66667%;}

.one-quarter{width:25%;}

.two-quarters{width:50%;}

.three-quarters{width:75%;}

.one-fifth{width:20%;}

.two-fifths{width:40%;}

.three-fifths{width:60%;}

.four-fifths{width:80%;}

.one-sixth{width:16.66667%;}

.two-sixths{width:33.33333%;}

.three-sixths{width:50%;}

.four-sixths{width:66.66667%;}

.five-sixths{width:83.33333%;}

.one-eighth{width:12.5%;}

.two-eighths{width:25%;}

.three-eighths{width:37.5%;}

.four-eighths{width:50%;}

.five-eighths{width:62.5%;}

.six-eighths{width:75%;}

.seven-eighths{width:87.5%;}

.one-tenth{width:10%;}

.two-tenths{width:20%;}

.three-tenths{width:30%;}

.four-tenths{width:40%;}

.five-tenths{width:50%;}

.six-tenths{width:60%;}

.seven-tenths{width:70%;}

.eight-tenths{width:80%;}

.nine-tenths{width:90%;}

.one-twelfth{width:8.33333%;}

.two-twelfths{width:16.66667%;}

.three-twelfths{width:25%;}

.four-twelfths{width:33.33333%;}

.five-twelfths{width:41.66667%;}

.six-twelfths{width:50%;}

.seven-twelfths{width:58.33333%;}

.eight-twelfths{width:66.66667%;}

.nine-twelfths{width:75%;}

.ten-twelfths{width:83.33333%;}

.eleven-twelfths{width:91.66667%;}

@media only screen and (max-width:589px){.small--one-whole{width:100%;}.small--one-half{width:50%;}.small--one-third{width:33.33333%;}.small--two-thirds{width:66.66667%;}.grid--uniform .small--one-half:nth-of-type(odd),.grid--uniform .small--one-third:nth-of-type(3n+1){clear:both;}.small--one-quarter{width:25%;}.small--two-quarters{width:50%;}.small--three-quarters{width:75%;}.grid--uniform .small--one-quarter:nth-of-type(4n+1){clear:both;}.small--one-fifth{width:20%;}.small--two-fifths{width:40%;}.small--three-fifths{width:60%;}.small--four-fifths{width:80%;}.grid--uniform .small--one-fifth:nth-of-type(5n+1){clear:both;}.small--one-sixth{width:16.66667%;}.small--two-sixths{width:33.33333%;}.small--three-sixths{width:50%;}.small--four-sixths{width:66.66667%;}.small--five-sixths{width:83.33333%;}.grid--uniform .small--one-sixth:nth-of-type(6n+1),.grid--uniform .small--three-sixths:nth-of-type(odd),.grid--uniform .small--two-sixths:nth-of-type(3n+1){clear:both;}.small--one-eighth{width:12.5%;}.small--two-eighths{width:25%;}.small--three-eighths{width:37.5%;}.small--four-eighths{width:50%;}.small--five-eighths{width:62.5%;}.small--six-eighths{width:75%;}.small--seven-eighths{width:87.5%;}.grid--uniform .small--four-eighths:nth-of-type(odd),.grid--uniform .small--one-eighth:nth-of-type(8n+1),.grid--uniform .small--two-eighths:nth-of-type(4n+1){clear:both;}.small--one-tenth{width:10%;}.small--two-tenths{width:20%;}.small--three-tenths{width:30%;}.small--four-tenths{width:40%;}.small--five-tenths{width:50%;}.small--six-tenths{width:60%;}.small--seven-tenths{width:70%;}.small--eight-tenths{width:80%;}.small--nine-tenths{width:90%;}.grid--uniform .small--five-tenths:nth-of-type(odd){clear:both;}.small--one-twelfth{width:8.33333%;}.small--two-twelfths{width:16.66667%;}.small--three-twelfths{width:25%;}.small--four-twelfths{width:33.33333%;}.small--five-twelfths{width:41.66667%;}.small--six-twelfths{width:50%;}.small--seven-twelfths{width:58.33333%;}.small--eight-twelfths{width:66.66667%;}.small--nine-twelfths{width:75%;}.small--ten-twelfths{width:83.33333%;}.small--eleven-twelfths{width:91.66667%;}.grid--uniform .small--four-twelfths:nth-of-type(3n+1),.grid--uniform .small--one-twelfth:nth-of-type(12n+1),.grid--uniform .small--six-twelfths:nth-of-type(odd),.grid--uniform .small--three-twelfths:nth-of-type(4n+1),.grid--uniform .small--two-twelfths:nth-of-type(6n+1){clear:both;}}
/* ... */

